[package]
name = "elytra-ping"
description = "Easily ping and get the status of Minecraft: Java Edition servers"
version = "1.2.0"
edition = "2021"
authors = ["doinkythederp"]
rust-version = "1.64"
categories = ["network-programming", "parser-implementations"]
keywords = ["minecraft", "server-list-ping", "ping"]

[features]
default = ["parse", "connect", "simple"]
parse = ["dep:serde", "dep:serde_json", "dep:void"]
connect = ["dep:tokio", "dep:trust-dns-resolver"]
simple = ["connect", "parse"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
mc-varint = "0.1.1"
serde = { version = "1.0.145", optional = true, features = ["serde_derive"] }
serde_json = { version = "1.0.85", optional = true }
snafu = { version = "0.7.4", features = ["backtraces-impl-backtrace-crate"] }
tokio = { version = "1.21.1", features = [
    "net",
    "io-util",
    "macros",
    "time",
], optional = true }
tracing = "0.1.36"
trust-dns-resolver = { version = "0.22.0", optional = true }
void = { version = "1.0.2", optional = true }

[dev-dependencies]
ctor = "0.1.26"
tokio = { version = "1.21.1", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
