[package]
name = "elytra-ping"
description = "Easily ping and get the status of running Minecraft servers"
version = "4.0.0"
edition = "2021"
authors = ["doinkythederp"]
rust-version = "1.68"
categories = ["network-programming", "parser-implementations"]
keywords = ["minecraft", "server-list-ping", "ping"]
license = "ISC"
repository = "https://github.com/craftserverbot/elytra-ping"

[features]
default = ["java_parse", "java_connect", "simple", "bedrock"]
java_parse = ["dep:serde", "dep:serde_json"]
java_connect = ["dep:tokio", "dep:trust-dns-resolver"]
simple = ["java_connect", "java_parse"]
bedrock = ["dep:chrono", "dep:rand"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2"
chrono = { version = "0.4", optional = true }
mc-varint = "0.1"
rand = { version = "0.8", optional = true }
serde = { version = "1.0", optional = true, features = ["serde_derive"] }
serde_json = { version = "1.0", optional = true }
snafu = { version = "0.8.1", features = ["backtraces-impl-backtrace-crate"] }
tokio = { version = "1.21", features = [
    "net",
    "io-util",
    "macros",
    "time",
], optional = true }
tracing = "0.1"
trust-dns-resolver = { version = "0.23", optional = true }

[dev-dependencies]
ctor = "0.2.4"
tokio = { version = "1.21", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
